<resources>
    <string name="app_name">Dision</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button_content_desc">Log in</string>
    <string name="register_organization">Register Organization</string>
    <string name="register">Register</string>
    <string name="name_of_organization_hint">Name of Organization</string>
    <string name="full_name_hint">Full name</string>
    <string name="select_an_organization">Select an Organization</string>
</resources>