<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".screens.login.LoginFragment">

    <LinearLayout
        android:id="@+id/loading_scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#99000000"
        android:visibility="gone"
        android:elevation="4dp"
        android:clickable="true"
        android:focusable="true">
        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/ball"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="32dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="32dp">

            <TextView
                android:id="@+id/appname_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="40sp"
                android:textColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/org_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_of_organization_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/appname_textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/org_name_edittext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address_hint"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/name_edittext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:autofillHints="emailAddress"
                android:inputType="textPassword"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/email_edittext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"
                android:background="@android:color/transparent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/password_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/log_in_button_content_desc" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/register_org_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_organization"
                app:layout_constraintTop_toBottomOf="@id/register_button"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>